# ciops

./: .gitmodules  README.md  aigerIO.py  blifIO.py  encoderCircuits.py  encoderCircuitsExact.py  exactSynthesiser.py  reduce.py  reduceWithAbc.py  specification.py  subcircuitSynthesiser.py  synthesisManager.py  synthesiser.py  utils.py
aiger_io/: CMakeLists.txt  aiger_bindings.cc  aiger_interface.h
